# bpack

./: .flake8  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .readthedocs.yml  MANIFEST.in  Makefile  README.md  README.rst  pyproject.toml  requirements-dev.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: build.yml  ci.yml  docs.yml  lint.yml
bpack/: __init__.py  ba.py  ba_decoder.py  bs.py  bs_decoder.py  codec_utils.py  codecs.py  descriptor.py  descriptors.py  enums.py  np.py  st.py  st_decoder.py  typing.py  utils.py
bpack/tests/: __init__.py  test_ba_decoder.py  test_backends_codec.py  test_codec_utils.py  test_codecs.py  test_decoder.py  test_decoder_ba.py  test_decoder_np.py  test_descriptor.py  test_desctiptor_utils.py  test_field_descriptor.py  test_future_annotations.py  test_packbits.py  test_record_descriptor.py  test_tools_codegen.py  test_typing.py  test_utils.py
bpack/tests/data/: flat.py
bpack/tools/: __init__.py  codegen.py
bpack/tools/tests/: __init__.py  test_codegen.py
bpack/tools/tests/data/: nested.py
docs/: TODO.rst  bpack.rst  conf.py  development.rst  features.rst  index.rst  indices.rst  installation.rst  license.rst  overview.rst  release_notes.rst  spelling_wordlist.txt  userguide.rst
docs/_templates/apidoc/: package.rst_t
docs/api/: bpack.ba.rst  bpack.bs.rst  bpack.codec_utils.rst  bpack.codecs.rst  bpack.descriptors.rst  bpack.enums.rst  bpack.np.rst  bpack.rst  bpack.st.rst  bpack.typing.rst  bpack.utils.rst
examples/: packet_decoding.py  s1isp.py  unpackbits-bench-sign+mod.ipynb  unpackbits-bench-signed.ipynb  unpackbits-bench-unsigned.ipynb
