[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"


[project]
name = "bpack"
authors = [
    {name = "Antonio Valentino", email = "antonio.valentino@tiscali.it"},
]
description = "Binary data structures (un-)packing library"
readme = {file = "README.rst", content-type = "text/x-rst"}
requires-python = ">=3.9"
keywords = [
    "binary",
    "struct",
    "descriptor",
    "declarative",
    "bit",
    "unpack",
    "pack"
]
license = {text = "Apache-2.0"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Scientific/Engineering",
    "Topic :: Utilities",
]
dynamic = ["version"]


[project.optional-dependencies]
bs = ["bitstruct"]
ba = ["bitarray>=1.5.1"]
np = ["numpy"]
codegen = ["black"]
test = ["pytest", "bpack[bs]", "bpack[ba]", "bpack[np]"]
full = ["bpack[bs]", "bpack[ba]", "bpack[np]", "bpack[codegen]", "bpack[test]"]


[project.urls]
Homepage = "https://github.com/avalentino/bpack"
Documentation = "https://bpack.readthedocs.io"
Repository = "https://github.com/avalentino/bpack.git"
Changelog = "https://github.com/avalentino/bpack/blob/main/docs/release_notes.rst"
Issues = "https://github.com/avalentino/bpack/issues"


[tool.setuptools]
packages = ["bpack", "bpack.tools", "bpack.tests", "bpack.tests.data"]
# zip-safe = true
# license-files = ["LICENSE"]


[tool.setuptools.dynamic]
version = {attr = "bpack.__version__"}


[tool.pytest.ini_options]
addopts = "--ignore=examples/"


[tool.black]
line-length = 79
# target-version = ['py311']
extend-exclude = "bpack/tests/data"


[tool.isort]
profile = "black"
length_sort = true
no_inline_sort = true
include_trailing_comma = true
use_parentheses = true
line_length = 79


[tool.pydocstyle]
match-dir='[^\.d].*'
# add-ignore = ["D105", "D107"]
