[metadata]
name = bpack
author = Antonio Valentino
author_email = antonio.valentino@tiscali.it
license = Apache-2.0
license_file = LICENSE
url = https://github.com/avalentino/bpack
description = Binary data structures (un-)packing library
long_description = file: README.rst
long_description_content_type = text/x-rst
keywords = binary, data, struct, descriptor, declarative, bit, unpack, pack
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Scientific/Engineering
    Topic :: Utilities
project_urls =
    Documentation = https://bpack.readthedocs.io
    Source = https://github.com/avalentino/bpack
    Tracker = https://github.com/avalentino/bpack/issues

[options]
packages = find:
install_requires =
    typing-extensions; python_version < "3.8"
zip_safe = True
tests_require =
    pytest
    bitarray >=1.5.1
    bitstruct
python_requires = >=3.7

[options.extras_require]
test =
    pytest
    bitarray >=1.5.1
    bitstruct
bs = bitstruct
ba = bitarray >=1.5.1
docs =
    sphinx
    sphinx_rtd_theme
